alot of stuff, mostly new cryptographic stuff

--- a/frontendnew/consumer.html
+++ b/frontendnew/consumer.html
@@ -14,14 +14,20 @@
     <p id="walletAddress"></p>
 
     <p>Item ID:</p><input type="number" id="verifyItemId" placeholder="Item ID">
-    <p>Public Signals:</p><input type="text" id="publicSignals" placeholder="Public Signals (comma separated)">
+
+    <p>Enter proof</p>
+    <input type="text" id="inputC">
+
+    <p>Enter public signal</p>
+    <input type="text" id="publicSignal">
+
     <br><button id="verifyBtn" disabled>Verify Item</button>
     <p id="verifyResult"></p>
 
 
 
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-    <script src="Consumer.js"></script>
+    <script src="newcon.js"></script>
 </body>
 
 </html>
