--- a/frontendnew/manufacturer.html
+++ b/frontendnew/manufacturer.html
@@ -17,6 +17,6 @@
   <p id="registerResult"></p>
 
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-  <script src="Manufacturer.js"></script>
+  <script src="newman.js"></script>
 </body>
 </html>
