--- a/frontendnew/consumer.html
+++ b/frontendnew/consumer.html
@@ -15,7 +15,7 @@
 
     <p>Item ID:</p><input type="number" id="verifyItemId" placeholder="Item ID">
 
-    <p>Enter proof</p>
+    <p>Enter public proof</p>
     <input type="text" id="inputC">
 
     <p>Enter public signal</p>
