--- a/frontendnew/manufacturer.html
+++ b/frontendnew/manufacturer.html
@@ -11,8 +11,10 @@
   <button id="connectBtn">Connect MetaMask</button>
   <p id="walletAddress"></p>
 
-  <input type="number" id="itemId" placeholder="Item ID">
-  <input type="text" id="metadataHash" placeholder="Metadata Hash">
+  <p>Enter item ID</p>
+  <input type="number" id="itemId" placeholder="Item ID"><br>
+  <p>Enter metadata hash</p>
+  <input type="text" id="metadataHash" placeholder="Metadata Hash"><br>
   <button id="registerBtn" disabled>Register Item</button>
   <p id="registerResult"></p>
 
